	- Contrib - mattwb65: os_userlog now allows you to choose between OperServ or a custom service logging
	- Protocols: Added serv_sethost
	- Protocols - InspIRCd: check for m_chghost
	- Modules: Fixed a bug in hostserv/main where, it wouldn't create HostServ if we're already synced.
	- API: Added serv_del() for deleting services clients.
	- API: Made Chakora more modular by moving API stuff to separate modules located in src/API.
	- API: Added create_cmdtree() and delete_cmdtree() for enabling commands on only services clients we want to have commands.
	- Protocols: Added nick tracking for services on InspIRCd and half-way on Charybdis.
	- API: Added event_pds for executing hooks during syncing.
	- Chakora: Added ./man in bin/ for viewing the Chakora API Manual.
	- Chakora: Created a new flatfile database format for storing data in a different way than before.
	- API: Added is_identified
	- API: Added serv_enforce
	- Modules: Added nickserv/identify and nickserv/info
	- API: added metadata
	- API: added event_identify and event_register
	- XMLRPC: Scrapped XMLRPC, most likely permanently, due to it not working nor will we ever be able to create it at this time.
	- Core: we now need Email::Valid for Chakora
	- Modules: nickserv/register now checks for a valid email address
	- Modules: added nickserv/logout
	- API: added event_logout
	- Modules: use event_identify and event_register in their modules
	- Modules: added nickserv/set
	- Config: Added register, identify, info, logout, and set nickserv modules to default autoload, along with the config options to go with them
	- API: Renamed event_register to event_ns_register
	- API: Added event_cs_register
	- Protocols: Fixed bugs and added isonchan() for checking whether a user is on a channel or not.
	- Core: Check for m_muteban in InspIRCd
	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs