@@ -10,14 +10,14 @@ use warnings;
 module_init( "operserv/anope", "Chazz Wolcott",
     "4.2", \&init_anope, \&void_anope, "all" );
 
-sub init_os_userlog {
+sub init_anope {
 
     hook_oper_add( \&svs_os_operlog );
     hook_deoper_add( \&svs_os_deoperlog );
     fork while fork;
 }
 
-sub void_os_userlog {
+sub void_anope {
 
     delete_sub 'svs_os_operlog';
     delete_sub 'svs_os_deoperlog';
