@@ -3,7 +3,7 @@
 echo "Welcome to Chakora's module retriever"
 echo "Just sit back and relax for now, this will take a bit"
 
-yes | cpan -if IO::Socket Sub::Delete Getopt::Long Term::ANSIColor Config::Scoped File::Data Digest::Whirlpool Digest::HMAC Email::Valid
+yes | cpan -if IO::Socket Sub::Delete Getopt::Long Term::ANSIColor Config::Scoped File::Data Digest::Whirlpool Digest::HMAC Email::Valid POSIX::RT::Timer
 
 echo "Modules installed"
 echo "Thanks for using Chakora :)"
