@@ -87,3 +87,10 @@ Current
 	- Protocols: Fixed bugs and added isonchan() for checking whether a user is on a channel or not.
 	- Core: Check for m_muteban in InspIRCd
 	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs
+	- Chakora: Use POSIX::RT::Timer.
+	- API: Added flaglist_add flaglist_del and flag_exists
+	- Chakora: Added chanserv/register and full status sync subs, channel and user member of channel trackers and bug fixes.
+	- API: Added event_kick and event_topic
+	- Protocols: Track KICK and TOPIC
+	- API: Added create_core_flags
+	- Modules: added chanserv/info and chanserv/flist
